@@ -2,12 +2,9 @@ package com.watchtogether.service;
 
 import com.watchtogether.model.SessionHistory;
 import com.watchtogether.repository.SessionHistoryRepository;
-import com.watchtogether.service.SessionHistoryService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -19,7 +16,7 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -29,145 +26,145 @@ class SessionHistoryServiceTest {
     private SessionHistoryRepository historyRepository;
 
     @InjectMocks
-    private SessionHistoryService historyService;
+    private SessionHistoryService sessionHistoryService;
 
-    @Captor
-    private ArgumentCaptor<SessionHistory> historyCaptor;
-
-    private SessionHistory history1;
-    private SessionHistory history2;
+    private String testSessionId;
+    private Long testRoomId;
+    private String testRoomCode;
+    private String testRoomName;
+    private String testVideoTitle;
+    private SessionHistory testHistory;
 
     @BeforeEach
     void setUp() {
-        history1 = new SessionHistory();
-        history1.setId(1L);
-        history1.setSessionId("session-123");
-        history1.setRoomId(1L);
-        history1.setRoomName("Test Room 1");
-        history1.setVideoTitle("Video 1");
-        history1.setJoinedAt(LocalDateTime.now().minusHours(2));
+        testSessionId = "session123";
+        testRoomId = 1L;
+        testRoomCode = "ROOM123";
+        testRoomName = "Test Room";
+        testVideoTitle = "Test Video";
 
-        history2 = new SessionHistory();
-        history2.setId(2L);
-        history2.setSessionId("session-123");
-        history2.setRoomId(2L);
-        history2.setRoomName("Test Room 2");
-        history2.setVideoTitle("Video 2");
-        history2.setJoinedAt(LocalDateTime.now().minusHours(1));
+        testHistory = new SessionHistory();
+        testHistory.setId(100L);
+        testHistory.setSessionId(testSessionId);
+        testHistory.setRoomId(testRoomId);
+        testHistory.setRoomCode(testRoomCode);
+        testHistory.setRoomName(testRoomName);
+        testHistory.setVideoTitle(testVideoTitle);
+        testHistory.setJoinedAt(LocalDateTime.now());
     }
 
     @Test
-    void joinRoom_WithValidData_ShouldCreateHistory() {
-        String sessionId = "session-123";
-        Long roomId = 1L;
-        String roomCode = "ROO123";
-        String roomName = "Test Room";
-        String videoTitle = "Test Video";
-
+    void joinRoom_shouldCreateSessionHistory() {
+        // Given
         when(historyRepository.save(any(SessionHistory.class))).thenAnswer(invocation -> {
-            SessionHistory h = invocation.getArgument(0);
-            h.setId(1L);
-            return h;
+            SessionHistory history = invocation.getArgument(0);
+            history.setId(100L);
+            history.setJoinedAt(LocalDateTime.now());
+            return history;
         });
 
-        SessionHistory result = historyService.joinRoom(sessionId, roomId, roomCode, roomName, videoTitle);
+        // When
+        SessionHistory result = sessionHistoryService.joinRoom(
+                testSessionId, testRoomId, testRoomCode, testRoomName, testVideoTitle);
 
+        // Then
         assertNotNull(result);
-        assertEquals(sessionId, result.getSessionId());
-        assertEquals(roomId, result.getRoomId());
-        assertEquals(roomCode, result.getRoomCode());
-        assertEquals(roomName, result.getRoomName());
-        assertEquals(videoTitle, result.getVideoTitle());
+        assertNotNull(result.getId());
+        assertEquals(testSessionId, result.getSessionId());
+        assertEquals(testRoomId, result.getRoomId());
+        assertEquals(testRoomCode, result.getRoomCode());
+        assertEquals(testRoomName, result.getRoomName());
+        assertEquals(testVideoTitle, result.getVideoTitle());
+        assertNotNull(result.getJoinedAt());
+        assertNull(result.getLeftAt());
 
-        verify(historyRepository).save(historyCaptor.capture());
-        SessionHistory saved = historyCaptor.getValue();
-        assertEquals(sessionId, saved.getSessionId());
-        assertEquals(roomId, saved.getRoomId());
+        verify(historyRepository, times(1)).save(any(SessionHistory.class));
     }
 
     @Test
-    void joinRoom_WithNullVideoTitle_ShouldSaveSuccessfully() {
-        String sessionId = "session-123";
-        Long roomId = 1L;
-        String roomCode = "ROO123";
-        String roomName = "Test Room";
+    void leaveRoom_shouldUpdateHistoryWhenFound() {
+        // Given
+        Long historyId = 100L;
+        when(historyRepository.findById(historyId)).thenReturn(Optional.of(testHistory));
+        when(historyRepository.save(any(SessionHistory.class))).thenReturn(testHistory);
 
-        when(historyRepository.save(any(SessionHistory.class))).thenAnswer(inv -> {
-            SessionHistory h = inv.getArgument(0);
-            h.setId(1L);
-            return h;
-        });
+        // When
+        sessionHistoryService.leaveRoom(historyId);
 
-        SessionHistory result = historyService.joinRoom(sessionId, roomId, roomCode, roomName, null);
-
-        assertNotNull(result);
-        assertNull(result.getVideoTitle());
-        verify(historyRepository).save(any(SessionHistory.class));
+        // Then
+        assertNotNull(testHistory.getLeftAt());
+        verify(historyRepository, times(1)).findById(historyId);
+        verify(historyRepository, times(1)).save(testHistory);
     }
 
     @Test
-    void leaveRoom_WithExistingHistory_ShouldUpdateLeftAt() {
-        Long historyId = 1L;
-        when(historyRepository.findById(historyId)).thenReturn(Optional.of(history1));
-
-        historyService.leaveRoom(historyId);
-
-        verify(historyRepository).save(historyCaptor.capture());
-        SessionHistory updated = historyCaptor.getValue();
-        assertNotNull(updated.getLeftAt());
-    }
-
-    @Test
-    void leaveRoom_WithNonExistentHistory_ShouldDoNothing() {
+    void leaveRoom_shouldDoNothingWhenHistoryNotFound() {
+        // Given
         Long historyId = 999L;
         when(historyRepository.findById(historyId)).thenReturn(Optional.empty());
 
-        historyService.leaveRoom(historyId);
+        // When
+        sessionHistoryService.leaveRoom(historyId);
 
-        verify(historyRepository, never()).save(any());
+        // Then
+        verify(historyRepository, times(1)).findById(historyId);
+        verify(historyRepository, never()).save(any(SessionHistory.class));
     }
 
     @Test
-    void getUserHistory_ShouldReturnAllHistoryForUser() {
-        String sessionId = "session-123";
-        List<SessionHistory> histories = Arrays.asList(history2, history1);
-        when(historyRepository.findBySessionIdOrderByJoinedAtDesc(sessionId)).thenReturn(histories);
+    void getUserHistory_shouldReturnHistoriesOrderedByJoinedAtDesc() {
+        // Given
+        List<SessionHistory> histories = Arrays.asList(testHistory);
+        when(historyRepository.findBySessionIdOrderByJoinedAtDesc(testSessionId)).thenReturn(histories);
 
-        List<SessionHistory> result = historyService.getUserHistory(sessionId);
+        // When
+        List<SessionHistory> result = sessionHistoryService.getUserHistory(testSessionId);
 
-        assertEquals(2, result.size());
-        assertEquals(history2.getId(), result.get(0).getId());
-        verify(historyRepository).findBySessionIdOrderByJoinedAtDesc(sessionId);
+        // Then
+        assertEquals(1, result.size());
+        assertEquals(testHistory.getId(), result.get(0).getId());
+        verify(historyRepository, times(1)).findBySessionIdOrderByJoinedAtDesc(testSessionId);
     }
 
     @Test
-    void getUserHistory_WithNoHistory_ShouldReturnEmptyList() {
-        String sessionId = "session-999";
-        when(historyRepository.findBySessionIdOrderByJoinedAtDesc(sessionId)).thenReturn(List.of());
+    void getUserHistoryWithLimit_shouldReturnLimitedHistories() {
+        // Given
+        int limit = 5;
+        List<SessionHistory> histories = Arrays.asList(testHistory);
+        when(historyRepository.findBySessionIdOrderByJoinedAtDescLimit(eq(testSessionId), any(PageRequest.class)))
+                .thenReturn(histories);
 
-        List<SessionHistory> result = historyService.getUserHistory(sessionId);
+        // When
+        List<SessionHistory> result = sessionHistoryService.getUserHistoryWithLimit(testSessionId, limit);
 
+        // Then
+        assertEquals(1, result.size());
+        verify(historyRepository, times(1)).findBySessionIdOrderByJoinedAtDescLimit(eq(testSessionId), any(PageRequest.class));
+    }
+
+    @Test
+    void getUserHistoryWithLimit_shouldReturnEmptyListWhenLimitIsZero() {
+        // Given
+        int limit = 0;
+
+        // When
+        List<SessionHistory> result = sessionHistoryService.getUserHistoryWithLimit(testSessionId, limit);
+
+        // Then
         assertTrue(result.isEmpty());
+        verify(historyRepository, never()).findBySessionIdOrderByJoinedAtDescLimit(anyString(), any(PageRequest.class));
     }
 
     @Test
-    void getUserHistoryWithLimit_ShouldReturnLimitedResults() {
-        String sessionId = "session-123";
-        List<SessionHistory> histories = Arrays.asList(history2, history1);
-        when(historyRepository.findBySessionIdOrderByJoinedAtDescLimit(eq(sessionId), any(PageRequest.class))).thenReturn(histories);
+    void getUserHistoryWithLimit_shouldReturnEmptyListWhenLimitIsNegative() {
+        // Given
+        int limit = -5;
 
-        List<SessionHistory> result = historyService.getUserHistoryWithLimit(sessionId, 10);
+        // When
+        List<SessionHistory> result = sessionHistoryService.getUserHistoryWithLimit(testSessionId, limit);
 
-        assertEquals(2, result.size());
-        verify(historyRepository).findBySessionIdOrderByJoinedAtDescLimit(eq(sessionId), any(PageRequest.class));
-    }
-
-    @Test
-    void getUserHistoryWithLimit_WithZeroLimit_ShouldReturnEmptyList() {
-        String sessionId = "session-123";
-
-        List<SessionHistory> result = historyService.getUserHistoryWithLimit(sessionId, 0);
-
+        // Then
         assertTrue(result.isEmpty());
+        verify(historyRepository, never()).findBySessionIdOrderByJoinedAtDescLimit(anyString(), any(PageRequest.class));
     }
 }
